Update Dev Training (#18)
* updated solutions to stop breaking, update copyright

* updated exercises

* updated dev guide to include section on java internals

* minor update

* minor update